--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 html {
-    background-color: #add7f6 ;
+    background-color: #000000 ;
 }
 
 #info-section {
@@ -18,7 +18,7 @@ input {
 }
 
 .current-city-data {
-    min-height: 220px;
+    min-height: 200px;
 }
 
 .table-box {
@@ -30,7 +30,9 @@ tr {
 }
 
 .card {
-    background-color: #a5b1c2;
+    background-color: #000000;
+    border: 2px solid #e8e8e8;
+    color: #e8e8e8;
     margin: 5px;
     min-height: 200px;
     max-width: 200px;
