--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,14 +2,24 @@ html {
     background-color: #000000 ;
 }
 
+body {
+    color: #e8e8e8;
+}
+
+#currentDay {
+    text-align: center;
+    color: #e8e8e8;
+}
+
 #info-section {
     padding-top: 15px;
 }
 
 #weather-data {
-    background-color: #75c0f5;
+    background-color:#525252;
+    border: 2px solid #e8e8e8;
     padding: 15px;
-    margin: 30px;
+    margin: 30px 0px;
     border-radius: 10px;
 }
 
@@ -22,15 +32,36 @@ input {
 }
 
 .table-box {
-    background-color:#4b6584;
+    background-color:#000000;
+    border: 2px solid #e8e8e8;
 }
 
 tr {
     margin: 5px;
 }
 
+#city-name {
+    color: #b7b7b7;
+}
+
+#city-cond {
+    color: #b7b7b7;
+}
+
+#temp {
+    color: #b7b7b7;
+}
+
+#high {
+    color: #b7b7b7;
+}
+
+#humidity {
+    color: #b7b7b7;
+}
+
 .card {
-    background-color: #000000;
+    background-color: #525252;
     border: 2px solid #e8e8e8;
     color: #e8e8e8;
     margin: 5px;
@@ -39,22 +70,86 @@ tr {
     border-radius: 10px;
 }
 
+#temp1 {
+    color: #b7b7b7;
+}
+
+#temp2 {
+    color: #b7b7b7;
+}
+
+#temp3 {
+    color: #b7b7b7;
+}
+
+#temp4 {
+    color: #b7b7b7;
+}
+
+#temp5 {
+    color: #b7b7b7;
+}
+
+#hum1 {
+    color: #b7b7b7;
+}
+
+#hum2 {
+    color: #b7b7b7;
+}
+
+#hum3 {
+    color: #b7b7b7;
+}
+
+#hum4 {
+    color: #b7b7b7;
+}
+
+#hum5 {
+    color: #b7b7b7;
+}
+
 .hero {
-    background: url(../images/weatherbanner.png);
+    background-color: #000000;
+    /* background: url(../images/weatherbanner.png);
     background-repeat: no-repeat;
-    background-size: auto;
+    background-size: auto; */
 }
 
 .title {
-    background: url(../images/transparency.png);
+    /* background: url(../images/transparency.png); */
     color: #fff;
     text-align: center;
-    max-width: 25%;
     border-radius: 10px;
+    margin-top: 20px;
     padding: 3px;
 }
 
 #submit {
+    width: 100%;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    border-radius: 10px;
+}
+
+#submit:hover {
+    background-color: lightgreen;
+    width: 100%;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    border-radius: 10px;
+}
+
+#clr-btn {
+    width: 100%;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    border-radius: 10px;
+}
+
+#clr-btn:hover {
+    background-color: lightcoral;
     width: 100%;
     margin-bottom: 20px;
     margin-top: 10px;
