added further styling and date and time to main page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,26 @@ tr {
     border-radius: 10px;
 }
 
+#date1 {
+    color: #b7b7b7;
+}
+
+#date2 {
+    color: #b7b7b7;
+}
+
+#date3 {
+    color: #b7b7b7;
+}
+
+#date4 {
+    color: #b7b7b7;
+}
+
+#date5 {
+    color: #b7b7b7;
+}
+
 #temp1 {
     color: #b7b7b7;
 }
